# crazythursday

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py
crazythursday/: __init__.py  kfc.py  utils.py
tests/: context.py  test.py
