[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crazythursday"
version = "0.9.0"
authors = [
  { name="lee", email="leezhuoming@qq.com" },
]
description = "KFC Crazy Thursday"
readme = "README.md"
license = { "GNU GPLv3" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/lee-plus-plus/crazythursday"
"Bug Tracker" = "https://github.com/lee-plus-plus/crazythursday/issues"
